Agregando estilo a la etiqueta h1

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenidos a mi pagina web</h1>    
+    <h1 style="color: brown;font-size: 25px;">Bienvenidos a mi pagina web</h1>    
     <p>Creando paginas con estilos en linea</p>
-    
+
 </body>
 </html>
