--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 style="color: brown;font-size: 25px;">Bienvenidos a mi pagina web</h1>    
-    <p>Creando paginas con estilos en linea</p>
+    <p style="color: cornflowerblue;font-size: 15px;">Creando paginas con estilos en linea</p>
 
 </body>
 </html>
