--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 style="color: brown;font-size: 25px;">Bienvenidos a mi pagina web</h1>    
     <p style="color: cornflowerblue;font-size: 15px;">Creando paginas con estilos en linea</p>
+    <img src="LOGOS.jpg" alt="">
 
 </body>
 </html>
