agregando bloques de estilo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: brown;
+            font-size: 40px;
+        }
+        img{
+            border: 6px solid blue;
+
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: brown;font-size: 40px;">Bienvenidos a mi pagina web</h1>    
