Agregando estilos.css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1 style="color: brown;font-size: 40px;">Bienvenidos a mi pagina web</h1>    
-    <p style="color: cornflowerblue;font-size: 25px;">Creando paginas con estilos en linea</p>
-    <img src="LOGOS.jpg" style="border: 6px solid black;">
+    <h1>Bienvenidos a mi pagina web</h1>    
+    <p>Creando paginas con estilos en linea</p>
+    <img src="LOGOS.jpg">
 
 </body>
 </html>
